--- a/src/assets/json/projects.json
+++ b/src/assets/json/projects.json
@@ -1,4 +1,16 @@
 {
+    "Accel": {
+        "tools": "NextJS, Tailwind, Flask, Amazon Bedrock, Langchain, Hume EVI",
+        "description": "An empathetic tutor that uses AI to provide personalized feedback to students. Won Best Use of Intel at Berkeley AI Hackathon 2024.",
+        "imagePath": "./Accel.png",
+        "link": "https://github.com/Accel-EmpatheticTutor/Accel"
+    },
+    "Polysolaris": {
+        "tools": "ReactJS, Tailwind, HTML Canvas",
+        "description": "A simulation of the n-body problem in physics. Uses the Runge-Kutta method to solve the differential equations.",
+        "imagePath": "./Polysolaris.png",
+        "link": "https://github.com/ElemelonWind/polysolaris"
+    },
     "OneVote": {
         "tools": "NextJS, OpenAI API, Google Cloud, Tailwind, CSS",
         "description": "AI chatbot tool that allows users can use to ask questions about candidate information, recent news, and more. Won Social Impact at MHacks 16.",
@@ -17,29 +29,11 @@
         "imagePath": "./EdgeDetection.png",
         "link": "https://github.com/ElemelonWind/edge-detection"
     },
-    "Knowledge Graph Generator": {
-        "tools": "Jupyter Notebook, spaCy, Pandas, Matplotlib",
-        "description": "Project done as part of research conducted under GMU's ASSIP program on automated ontological knowledge formation.",
-        "imagePath": "./KnowledgeGraph.png",
-        "link": "https://github.com/ElemelonWind/knowledge-graph"
-    },
     "Othello Bot": {
         "tools": "Python, TKinter",
         "description": "An AI bot that uses minimax algorithms to play othello. Uses techniques such as alphabeta pruning and heuristics.",
         "imagePath": "./Othello.png",
         "link": "https://github.com/ElemelonWind/othello-bot"
-    },
-    "Lyric Finder": {
-        "tools": "ReactJS, Musixmatch API, Bootstrap",
-        "description": "A react app that finds the lyrics of songs using the Musixmatch API. Includes a top ten tracks leaderboard and ratings of songs.",
-        "imagePath": "./LyricFinder.png",
-        "link": "https://github.com/ElemelonWind/react-lyric-finder"
-    },
-    "Sentiment Classifier": {
-        "tools": "Jupyter Notebook, Pandas, Numpy, NLTK, SKLearn",
-        "description": "A natural language processing model that finds the sentiment (good or bad) of restaurant reviews.",
-        "imagePath": "./NLP.png",
-        "link": "https://github.com/ElemelonWind/sentiment-classifier"
     },
     "Portfolio": {
         "tools": "ReactJS, Bootstrap, CSS, EmailJS",
